--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="infoModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('infoModal')">&times;</span>
-      <img src="./img/infoBild.png" alt="Info">
+      <img src="./img/infoBild.jpeg" alt="Info">
       <p>Drücke den verlangten Buchstaben. <br>
         linke Hand: A S D F | rechte Hand: J K L ö</p>
       <a href="https://sg.typewriter.ch/index.php?r=site/index" target="_blank">Website von Typewriter</a>
